<resources>


    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>

    <string name="income">Income</string>
    <string name="outcome">Outcome</string>

    <string name="title_dialog_new_operation">Add transaction</string>
    <string name="success_add_record">Success add record</string>
    <string name="failed_add_record">Filed add record</string>

    <string name="title_bills_activity">Bills</string>

    <string name="app_name">FinTrack</string>

    <string name="current_balance">Balance</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="LangTitle">Language</string>
    <string name="LangDialogTitle">Choose language:</string>
    <string name="LangSummary">Application language.\nRestart the application to accept the changes..</string>

    <string-array name="entries_lang">
        <item>Language</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="entryvalues_lang">
        <item>default</item>
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="name_currency">
        <item>USD</item>
        <item>RUB</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="description_app">Описание: \n Приложение для управления личными финансами \n Разработчик: Зеленин Р.А., Сорокин В. А. \n ШМР Яндекс \n 2018</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accounts">Accounts</string>
    <string name="expense">Expense</string>
    <string name="add_transaction">New transaction</string>
    <string name="hint_sum">Sum</string>
    <string name="error_invalid_number">Invalid sum</string>
    <string name="no_transactions_yet">Click button at the bottom to add transaction</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="bank_account">Bank account</string>
    <string name="error_select_category">Please select category</string>
    <string name="job">Job</string>
    <string name="freelance">Freelance</string>
    <string name="tutoring">Tutoring</string>
    <string name="shopping">Shopping</string>
    <string name="medicine">Medicine</string>
    <string name="car">Car</string>
    <string name="house">House</string>
    <string name="hobby">Hobby</string>
    <string name="clothes">Clothes</string>
    <string name="debt_return">Debt return</string>
    <string name="is_periodic">Is periodic?</string>
    <string name="hint_period">Period (in days)</string>
    <string name="transaction_added">Transaction added!</string>
    <string name="error_invalid_period">Invalid number of days</string>
    <string name="periodic_transaction_added">Periodic transaction added!</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id cursus neque. Mauris a ante quis elit rutrum convallis. Donec sit amet tortor a odio pharetra congue. Morbi blandit ligula vitae imperdiet facilisis. Nulla rutrum feugiat justo, eget elementum enim consectetur non. Curabitur vestibulum lectus nunc, sed varius turpis viverra non. Nullam semper, dui a venenatis porta, sem mauris commodo lectus, vitae pulvinar massa nisl at odio. Maecenas pulvinar nisi aliquet orci porttitor posuere. Mauris gravida lacus at dolor bibendum, quis consequat ligula mattis.  Ut id massa odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam non vestibulum augue. Vestibulum dictum, justo sit amet porta pretium, ligula sapien mattis tellus, consectetur interdum quam magna sed diam. Nunc interdum orci maximus erat hendrerit, id mattis sapien iaculis. Aenean tellus est, feugiat sed faucibus a, dictum sit amet felis. Duis hendrerit malesuada nisl vitae tempor. Nunc non posuere magna. Donec enim neque, porta a justo a, commodo vehicula lorem. Etiam ac pharetra ex, at mattis neque. Aliquam felis sem, bibendum a ultrices ut, molestie non eros.  Vestibulum rutrum gravida laoreet. Donec arcu felis, volutpat sagittis malesuada maximus, ornare in nibh. Fusce id nunc aliquam, egestas enim nec, mattis mi. Nunc non est velit. Maecenas imperdiet rhoncus dictum. Sed rhoncus justo vel lorem iaculis luctus. Phasellus eget odio enim. Aliquam erat volutpat. Aliquam bibendum id ex in placerat. Ut vel blandit mi. Aliquam enim nisl, euismod pellentesque vestibulum nec, rutrum vel ex. Integer tincidunt, ipsum id mattis suscipit, felis augue consectetur ipsum, ut semper nulla ante a augue. Donec maximus fermentum dui, et dignissim nisl porttitor vitae.  Vivamus eu tortor efficitur, facilisis enim non, laoreet magna. Donec vitae velit vel risus condimentum aliquet. Etiam a tortor sed sapien dictum congue eget id neque. Vestibulum semper laoreet malesuada. Integer sed tristique velit. Praesent blandit metus at velit egestas, ut sollicitudin ante eleifend. Vestibulum interdum nibh lacus, sed viverra tortor lacinia ut. Duis vitae massa augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tincidunt sapien lobortis nisi vestibulum, eget ornare diam luctus. Aliquam non ipsum sapien. Etiam non metus eget eros tristique maximus. In in ultricies lorem. Nunc ornare arcu a enim imperdiet accumsan. Nam cursus eu metus non interdum. Suspendisse in molestie nibh.  Donec sit amet euismod quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Ut pulvinar, velit ut aliquet venenatis, diam quam egestas ipsum, in rhoncus lectus mi eget sapien. Nam sed finibus tortor. Sed dui lectus, convallis nec dictum sed, varius nec felis. Proin facilisis quam tortor, quis fermentum ante vestibulum vel. Mauris et magna blandit, cursus arcu vitae, rutrum sem. Nullam vitae congue risus, nec malesuada lectus. Nulla tincidunt, urna id gravida faucibus, nisl neque semper ante, porta ullamcorper diam eros sit amet leo. Cras commodo ex a facilisis mollis. Suspendisse laoreet bibendum lectus, vel interdum lorem viverra sed. Suspendisse sit amet arcu molestie, porttitor dui et, tincidunt sem.</string>
    <string name="btn_new_transaction">New transaction</string>
    <string name="show_in_other_currencies">In other currencies</string>
    <string name="logo_ya">Ya.</string>
    <string name="confirm_transaction">Confirm</string>
    <string name="nav_template_and_periodic_transactions">Templates and periodic</string>
    <string name="templates">Templates</string>
    <string name="periodic">Periodic</string>
    <string name="gifts">Gifts</string>

</resources>
